Fix image alignment on hpg

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,3 +46,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.container{
+    margin-left: -10px;
+}
